# Rust

./: structure.rs
Advanced Concepts/D26_Error_Handling/: Cargo.toml
Advanced Concepts/D27_Testing_Code/: Cargo.toml
Advanced Concepts/D28_Async_In_Rust/: Cargo.toml
Advanced Concepts/D29_Multi_Threading/: Cargo.toml
Advanced Concepts/D30_Macros_Are_Everywhere/: Cargo.toml
Backend/1-axum-sqlx-blog/: README.md  requests_blogs.http
Backend/D11_Axum/: Cargo.toml  requests.http
Backend/D11_Practice_Todo/: Cargo.toml  post
Backend/D12_SQLx/: .env  .gitignore  Cargo.toml  requests.http
Backend/D12_SQLx/migrations/: 20260517010426_create_todo_table.sql
Backend/D12_SQLx/src/: app_state.rs  main.rs
Backend/D12_SQLx/src/domain/todo/: dto.rs  error.rs  routes.rs  todo.rs
Backend/D12_SQLx/src/utils/: handle_timeout_error.rs  setup_tracing.rs
Backend/SQLxBlog/: Cargo.toml
Backend/⭐--axum-sqlx-todos/: README.md  REPORT.md  requests.http  rustfmt.toml
Backend/⭐1-axum-sqlx-blog/: .env  Cargo.toml  requests_authors.http
Backend/⭐2-axum-sqlx-stored-procedures/: .env  Cargo.toml  README.md  requests.http  rustfmt.toml
D6-Structs-and-Enums/Optional_01_tuple_vs_struct/: Cargo.toml  README.md
D6-Structs-and-Enums/Optional_02_task_manager/: Cargo.toml  README.md
D6-Structs-and-Enums/enum_inside_struct/: Cargo.toml
D7-Option-and-Result/: README.md
D7-Option-and-Result/01_option_unwrap_expect/: Cargo.toml  README.md
Day1/src/: main.rs
Day10/: Cargo.toml
Day5/: note.txt
Day6/: Cargo.toml
Day8/: Cargo.toml
Day9/: Cargo.toml
Day_4/: Cargo.toml
(+186 files in other folders)
