[package]
name = "W3_D12_axum-sqlx-todos-sqlx-postgres"
version = "0.1.0"
edition = "2024"
publish = false



[workspace] # ✅ This tells the compiler not to look parent.


[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }
dotenvy = "0.15"
time = { version = "0.3", features = ["serde", "macros"] }
thiserror = "2"
